--- a/OCR-Reader/build.gradle
+++ b/OCR-Reader/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     repositories {
         jcenter()
+
         maven {
             url 'https://maven.google.com/'
             name 'Google'
@@ -10,6 +11,8 @@ buildscript {
         google()
     }
     dependencies {
+
+
         classpath 'com.android.tools.build:gradle:3.6.1'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -25,4 +28,8 @@ allprojects {
             name 'Google'
         }
     }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
