--- a/OCR-Reader/app/src/main/AndroidManifest.xml
+++ b/OCR-Reader/app/src/main/AndroidManifest.xml
@@ -7,6 +7,9 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
 
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
 
@@ -17,6 +20,15 @@
         android:theme="@style/AppTheme"
         android:roundIcon="@mipmap/ic_launcher_round"
         >
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.example.android.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_parths" />
+        </provider>
 
 
         <meta-data
@@ -26,6 +38,12 @@
         <activity
             android:name=".activities.OcrCaptureActivity"
             android:label="Detect Text" />
+        <activity
+            android:name=".activities.CameraActivity"
+            android:label="Detect Text"
+            android:screenOrientation="fullSensor"
+            />
+
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name"
